# rag-pipline

./: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-workspace.yaml  turbo.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_04_18_1441_add_review_decisions_and_review_comments.py  2026_04_18_1708_add_chunks_and_update_vector_collections.py  2026_04_19_0127_add_content_hash_to_documents.py  edaa014c2adf_initial_schema.py
apps/api/src/: config.py  database.py  logging_config.py  main.py  metrics.py  rate_limit.py  telemetry.py
apps/api/src/agents/: __init__.py  a2a_agent_cards.py  a2a_audit_server.py  a2a_correction_server.py  a2a_helpers.py  a2a_loop_orchestrator.py  a2a_servers.py  audit_agent.py  audit_state.py  correction_agent.py  correction_state.py  schema_validator.py
apps/api/src/auth/: __init__.py  jwt.py
apps/api/src/converters/: __init__.py  markdown_converter.py
apps/api/src/crawlers/: __init__.py  fetcher.py  link_discovery.py
apps/api/src/embeddings/: __init__.py  config.py  fastembed_service.py
apps/api/src/ingest/: __init__.py  chunker.py  chunking_pipeline.py  qdrant_ingest.py  reingestion.py
apps/api/src/mcp/: __init__.py  http_transport.py  server.py  tool_handlers.py
apps/api/src/models/: __init__.py  audit.py  chunk.py  document.py  review.py
apps/api/src/routers/: __init__.py  a2a_discovery.py  audit.py  auth.py  health.py  ingest.py  jobs.py  loop.py  review.py  websocket.py
apps/api/src/schemas/: __init__.py  chunk.py  collection.py  document.py  job.py  review.py
apps/api/tests/: __init__.py  conftest.py  test_a2a_helpers.py  test_audit_agent.py  test_auth.py  test_chunker.py  test_converter.py  test_fastembed_service.py  test_health.py  test_link_discovery.py  test_mcp_http_transport.py  test_mcp_server.py  test_reingestion.py  test_review_api.py  test_schema_validator.py  test_url_validator.py
(+165 files in other folders)
